@@ -23,7 +23,7 @@
     <tr class="<%= cycle :even, :odd, :name => 'deployments' %>">
       <td><%= link_to h(deployment.task), project_stage_deployment_path(current_project, current_stage, deployment) %></td>
       <td><%=h deployment.created_at.to_s(:log)  %><br /><%=h deployment.completed_at.to_s(:log) rescue '&nbsp;' %></td>
-      <td><%=h truncate(deployment.comment, 37) %></td>
+      <td><%=h truncate(deployment.description, 37) %></td>
       <td><%= user_info(deployment.user) rescue '' %></td>
       <td><%= image_tag('peritor_theme/'+deployment.status_image)%></td>
     </tr>
