@@ -13,7 +13,7 @@ Deployed by: <%= @deployment.user.login %>
 
 Comment: 
 
-<%= @deployment.comment %>
+<%= @deployment.description %>
 
 
 Log:
